# pinch

./: CMakeLists.txt  fileio.cpp  pinch.cpp
bench/: test
cmake/: Protobuf.cmake
code/: arithmetic.hpp  bin_acode.hpp  binary.hpp  code.hpp
model/: CMakeLists.txt  bin_rnn.hpp  bin_rnn.py  model.py
model/binary/: basic.hpp  count_method.hpp  nn.hpp  nn.py
pinch/python/: ans.py  arithmetic.py  arithmetic_old.py  bit_manipulation.py  core.py  lzw.py  out  utility.py
pinch/python/texts/: dickens-selection
python/: rnn_coder.py
