cmake_minimum_required(VERSION 3.5)
project(pinch)
# c++ standard
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(pinch pinch.cpp)
target_include_directories(pinch PUBLIC code)
# benchmarking and testing on build
file(GLOB benchfiles "bench/*")
add_custom_target(pinch-test ALL DEPENDS pinch)
foreach(file ${benchfiles})
  get_filename_component(name "${file}" NAME)
  file(COPY "bench/${name}" DESTINATION "bench/")
  add_custom_command(TARGET pinch-test POST_BUILD COMMAND "./pinch" "bench" "bench/${name}")
endforeach(file)